Bug 438328 - Payee name in schedule is not updated in all accounts
Summary: Payee name in schedule is not updated in all accounts
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-09 14:08 UTC by Thomas Baumgart
Modified: 2021-06-09 16:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2021-06-09 14:08:00 UTC
SUMMARY
Payee name in schedule is not updated in ledger when the preview option is active.

STEPS TO REPRODUCE
1. Set the schedule preview period to 14 days
2. Create a scheduled transaction (a transfer from account A to B is best to duplicate the problem) with a first due date within the next ten days and save it. Make sure to assign a payee.
3. Check that the same payee is shown in the ledger of both accounts for this schedule
4. Edit the schedule and assign a different payee. Save the schedule.

OBSERVED RESULT
5. Goto ledger of account A and check that the new name is shown
6. Goto ledger of account B and check that the original name is shown


EXPECTED RESULT
5. Goto ledger of account A and check that the new name is shown
6. Goto ledger of account B and check that the new name is shown
Comment 1 Thomas Baumgart 2021-06-09 16:04:23 UTC
Git commit ff1f23ae32623a9bdb13128b085e989d50c83195 by Thomas Baumgart.
Committed on 09/06/2021 at 16:04.
Pushed by tbaumgart into branch '5.1'.

All splits in a scheduled transaction reference the same payee
FIXED-IN: 5.1.2

note: no need to cherry-pick to master as master will eventually allow
to modify the payee on a split basis.

M  +11   -0    kmymoney/dialogs/keditscheduledlg.cpp

https://invent.kde.org/office/kmymoney/commit/ff1f23ae32623a9bdb13128b085e989d50c83195