All splits in a scheduled transaction reference the same payee

BUG: 438328
FIXED-IN: 5.1.2

note: no need to cherry-pick to master as master will eventually allow
to modify the payee on a split basis.